--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "coming-soon",
+  "name": "webpack-4-boilerplate",
   "version": "1.0.0",
-  "description": "landing page",
-  "main": "main.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FBW-12/18-coming-soon-landingpage-AtarDavid.git"
-  },
-  "author": "AD",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/FBW-12/18-coming-soon-landingpage-AtarDavid/issues"
-  },
-  "homepage": "https://github.com/FBW-12/18-coming-soon-landingpage-AtarDavid#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
